--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.gitignore
 Foundation/Activity_1_Resources/Activity_1_2023-1_Part_1.docx
 Foundation/Activity_1_Resources/Activity_1_2023-1_Part_1.pdf
 Foundation/Activity_1_Resources/Activity_1_2023-1_Part_2_Final.pdf
