modified:   .gitignore 	new file:   ComProg/String/camelcase.cpp 	new file:   ComProg/String/camelcase.exe 	new file:   ComProg/String/decode.cpp 	new file:   ComProg/String/decode.exe 	new file:   Foundation/Activity 5/Part1/part1.html 	new file:   Foundation/Activity 5/Part2/part2.html 	new file:   Foundation/Activity 5/Part2/styles.css 	new file:   Foundation/Activity 5/Part3/part3.html 	new file:   Foundation/Activity 5/Part3/script.js 	new file:   Foundation/Activity 5/Part3/styles.css 	new file:   Foundation/Activity 5/Part4/part4.html 	new file:   Foundation/Activity 5/Part4/script.js 	new file:   Foundation/Activity 5/Part4/styles.css

--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,5 @@ Foundation/Activity_1_Resources/03 Part 3/palettes/nestopia_yuv.pal
 Foundation/Activity_1_Resources/03 Part 3/roms/Super Mario Bros. (Japan, USA).nes
 Foundation/Activity_1_Resources/03 Part 3/roms/Super Mario Bros. (Japan, USA).nes.deb
 Foundation/Activity_1_Resources/03 Part 3/tools/taseditor_patterns.txt
+Foundation/Activity 5/Part3.zip
+Foundation/Activity 5/Part4.zip
