modified:   .gitignore 	new file:   ComProg/Vector/top3sale.cpp 	new file:   ComProg/Vector/top3sale.exe

--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,7 @@ Foundation/Activity_1_Resources/03 Part 3/roms/Super Mario Bros. (Japan, USA).ne
 Foundation/Activity_1_Resources/03 Part 3/tools/taseditor_patterns.txt
 Foundation/Activity 5/Part3.zip
 Foundation/Activity 5/Part4.zip
+Foundation/FinalProject/app.js
+Foundation/FinalProject/index.html
+Foundation/FinalProject/style.css
+Foundation/FinalProject/test.html
