--- a/SoftwareDefined/Lab2/compose.yml
+++ b/SoftwareDefined/Lab2/compose.yml
@@ -1,3 +1,5 @@
+name: monitoring
+
 networks:
   monitoring:
     driver: bridge
@@ -23,8 +25,8 @@ services:
     container_name: prometheus
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    expose:
-      - 9090
+    ports:
+      - 9090:9090
     networks:
       - monitoring
 
